# aiows

./: README.md  debug_middleware.py  pyproject.toml
aiows/: __init__.py  dispatcher.py  server.py  settings.py  validators.py  websocket.py
aiows/middleware/: __init__.py  auth.py  connection_limiter.py  logging.py  rate_limit.py
aiows/types/: __init__.py
examples/: chat_client.html  graceful_shutdown_example.py  secure_chat_client.html
tests/: test_auth_security.py  test_authorization_runtime.py  test_basic.py  test_connection_limiting.py  test_connection_management.py  test_dispatcher_thread_safety.py  test_error_handling.py  test_final_integration.py  test_graceful_shutdown.py  test_input_validation.py  test_integration.py  test_memory_management.py  test_message_size_limits.py  test_middleware_runtime.py  test_secure_logging.py  test_ssl_support.py  test_websocket_thread_safety.py
wsogram/: __init__.py  dispatcher.py  exceptions.py  router.py  server.py  websocket.py
wsogram/types/: __init__.py
